[lworld] C2 compilations fails with assert(false) failed: type flow analysis failed for OSR compilation

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/parse1.cpp:518), pid=135637, tid=135645
      # assert(false) failed: type flow analysis failed for OSR compilation
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-06-02-1135579.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-06-02-1135579.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, serial gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1537b8c] Parse::Parse(JVMState*, ciMethod*, float)+0x118c

      Stack: [0x00007f77b77fe000,0x00007f77b78ff000], sp=0x00007f77b78fb920, free space=1014k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1537b8c] Parse::Parse(JVMState*, ciMethod*, float)+0x118c (parse1.cpp:518)
      V [libjvm.so+0x87b6db] ParseGenerator::generate(JVMState*)+0x16b (callGenerator.cpp:100)
      V [libjvm.so+0xa2d4e6] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1626 (compile.cpp:779)
      V [libjvm.so+0x878e8b] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x3eb (c2compiler.cpp:118)
      V [libjvm.so+0xa39220] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa00 (compileBroker.cpp:2265)
      V [libjvm.so+0xa3a088] CompileBroker::compiler_thread_loop()+0x5f8 (compileBroker.cpp:1944)
      V [libjvm.so+0xefa39c] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:720)
      V [libjvm.so+0x17faeaa] Thread::call_run()+0xba (thread.cpp:217)
      V [libjvm.so+0x14e25ec] thread_native_entry(Thread*)+0x11c (os_linux.cpp:775)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: