8309353: [lworld] C2 compilations fails with assert(false) failed: type flow analysis failed for OSR compilation